# codepolicy

./: .gitignore  LICENSE-MIT  README.md  proposal.md  publish.sh
codepolicy/: Cargo.toml  README.md
codepolicy/crates/codepolicy-cli/: Cargo.toml
codepolicy/crates/codepolicy-cli/assets/: codepolicy.rules  codepolicy.yaml
codepolicy/crates/codepolicy-cli/src/: main.rs
codepolicy/crates/codepolicy-cli/tests/: fixtures.rs
codepolicy/crates/codepolicy-core/: Cargo.toml
codepolicy/crates/codepolicy-core/src/: lib.rs
codepolicy/crates/codepolicy-events/: Cargo.toml
codepolicy/crates/codepolicy-events/src/: lib.rs
codepolicy/crates/codepolicy-frontends/: Cargo.toml
codepolicy/crates/codepolicy-frontends/src/: lib.rs  manifest.rs  ts_js.rs
codepolicy/crates/codepolicy-match/: Cargo.toml
codepolicy/crates/codepolicy-match/src/: lib.rs
codepolicy/crates/codepolicy-report/: Cargo.toml
codepolicy/crates/codepolicy-report/src/: lib.rs
codepolicy/crates/codepolicy-rules/: Cargo.toml
codepolicy/crates/codepolicy-rules/src/: dsl.rs  lib.rs
codepolicy/crates/codepolicy-token/: Cargo.toml
codepolicy/crates/codepolicy-token/src/: lib.rs
codepolicy/fixtures/argkind_repo/apps/: c.ts
codepolicy/fixtures/class_repo/apps/: x.ts
codepolicy/fixtures/count_repo/apps/: env.ts
codepolicy/fixtures/listener_repo/apps/: widget.ts
codepolicy/fixtures/repo/: package.json
codepolicy/fixtures/repo/apps/admin/src/: handler.ts  notes.ts  payments.ts
codepolicy/fixtures/repo/apps/admin/src/config/: env.ts
codepolicy/fixtures/repo/apps/admin/src/features/members/: Member.tsx
codepolicy/fixtures/repo/apps/admin/src/infrastructure/: aws.ts
codepolicy/fixtures/repo_waived/: package.json
codepolicy/fixtures/repo_waived/.codepolicy/waivers/: 0007-store.yaml
codepolicy/fixtures/repo_waived/apps/web/src/: store.ts
codepolicy/fixtures/repo_waived/docs/adr/: 0042-state.yaml
codepolicy/fixtures/scope_repo/apps/: lock.ts
codepolicy/fixtures/seq_repo/: codepolicy.yaml
codepolicy/fixtures/seq_repo/apps/: db.ts
codepolicy/fixtures/starter_repo/apps/: x.ts
codepolicy/fixtures/struct_repo/apps/: x.ts
codepolicy/fixtures/waiver_repo/.codepolicy/waivers/: 0001.yaml
tyrant/: Cargo.toml
tyrant/crates/tyrant/: Cargo.toml  README.md
tyrant/crates/tyrant-core/: Cargo.toml
tyrant/crates/tyrant-core/src/: lib.rs
tyrant/crates/tyrant-frontends/: Cargo.toml
tyrant/crates/tyrant-frontends/src/: lib.rs  ts_js.rs
tyrant/crates/tyrant-match/: Cargo.toml
tyrant/crates/tyrant-match/src/: lib.rs
tyrant/crates/tyrant-report/: Cargo.toml
tyrant/crates/tyrant-report/src/: lib.rs
tyrant/crates/tyrant-rules/: Cargo.toml
tyrant/crates/tyrant-rules/src/: dsl.rs  lib.rs
tyrant/crates/tyrant-token/: Cargo.toml
tyrant/crates/tyrant-token/src/: lib.rs
tyrant/crates/tyrant/assets/: tyrant.rules  tyrant.yaml
tyrant/crates/tyrant/src/: main.rs
tyrant/crates/tyrant/tests/: fixtures.rs
tyrant/fixtures/token_repo/apps/: dbg.ts  s.ts
tyrant/fixtures/tokrel_repo/apps/: x.ts  y.ts
tyrant/fixtures/waiver_repo/apps/: x.ts
