[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Cobra-inspired multi-language policy harness for LLM-assisted software engineering"

[workspace.dependencies]
# Internal crates
codepolicy-events = { path = "crates/codepolicy-events" }
codepolicy-frontends = { path = "crates/codepolicy-frontends" }
codepolicy-rules = { path = "crates/codepolicy-rules" }
codepolicy-match = { path = "crates/codepolicy-match" }
codepolicy-report = { path = "crates/codepolicy-report" }
codepolicy-core = { path = "crates/codepolicy-core" }

# External crates (versions per proposal §10.5, corrected)
anyhow = "1"
thiserror = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
serde_yaml_ng = "0.9"               # maintained fork; upstream serde_yaml was deprecated in 2024
camino = { version = "1", features = ["serde1"] }
ignore = "0.4"
globset = "0.4"
regex = "1"
rayon = "1"
tree-sitter = "0.26"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.25"
