[package]
name = "codepolicy-frontends"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Language frontends that lex source into token streams for codepolicy"

[dependencies]
codepolicy-token.workspace = true
anyhow.workspace = true
camino.workspace = true
serde_json.workspace = true
tree-sitter.workspace = true
tree-sitter-typescript.workspace = true
tree-sitter-javascript.workspace = true
