[package]
name = "codepolicy-report"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Violation reporting (human, JSON, agent) for codepolicy"

[dependencies]
codepolicy-events.workspace = true
codepolicy-match.workspace = true
codepolicy-rules.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
camino.workspace = true
