[package]
name = "tyrant-match"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Rule matching over the token stream for tyrant"

[dependencies]
tyrant-token.workspace = true
tyrant-rules.workspace = true
serde.workspace = true
serde_json.workspace = true
camino.workspace = true
