[package]
name = "tyrant-report"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Violation reporting (human, JSON, agent) for tyrant"

[dependencies]
tyrant-token.workspace = true
tyrant-match.workspace = true
tyrant-rules.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
camino.workspace = true
