[package]
name = "tyrant-rules"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Rule schema, YAML loading and compilation for tyrant"

[dependencies]
tyrant-token.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml_ng.workspace = true
regex.workspace = true
globset.workspace = true
thiserror.workspace = true
camino.workspace = true
