[package]
name = "tyrant-token"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "The lexeme/token model for tyrant"

[dependencies]
serde.workspace = true
serde_json.workspace = true
camino.workspace = true
